Global and local db schemas

--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -1,9 +1,15 @@
 core:
   database:
-    databaseName:
-    password:
-    ip:
-    username:
+    local:
+      databaseName:
+      password:
+      ip:
+      username:
+    global:
+      databaseName:
+      password:
+      ip:
+      username:
   redis:
     database:
     password:
