--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -722,8 +722,8 @@ skills:
       baseSlowDuration: 2.0
       cooldownDecreasePerLevel: 0.0
       slowDurationIncreasePerLevel: 1.0
-      baseProcDuration: 1.0
-      procDurationincreasePerLevel: 0.0
+      baseChannelDuration: 1.0
+      channelDurationincreasePerLevel: 0.0
       slowStrength: 3
     healingshot:
       enabled: true
