--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -167,6 +167,7 @@ skills:
       healRate: 1.0
       baseHeal: 3.0
       healIncreasePerLevel: 1.0
+      healInterval: 0.5
     vengeance:
       enabled: true
       maxlevel: 3
