Add Blood Compass (#244)
* added to config

* added blood compass

* Update BloodCompass.java

* blood compass changes

* updated config

* fixed prs with blood compass

* updated config once again

* fixed accidental indent

* did blood compass main

* config update too

--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -815,6 +815,19 @@ skills:
       durationIncreasePerLevel: 0.5
       distance: 5
       duration: 2.0
+    bloodcompass:
+      enabled: true
+      maxlevel: 3
+      numLines: 1
+      effectDuration: 5
+      maxDistance: 64.0
+      numPoints: 30
+      cooldown: 20.0
+      escapeRadius: 7.0
+      damage: 7.0
+      damageIncreasePerLevel: 2.0
+      escapeRadiusIncreasePerLevel: 0.0
+      maxDistanceIncreasePerLevel: 0.0
     grasp:
       enabled: true
       maxlevel: 5
