made flesh hook function similarly to mineplex (#246)
* changed flesh hook

* updated config for flesh hook

* updated throwable item class

* changed description

* flesh hook revamp

* config changes

* remove stuff from ThrowableItem

---------

Co-authored-by: Mykindos <tomhoogstra@live.com.au>

--- a/champions/src/main/resources/config.yml
+++ b/champions/src/main/resources/config.yml
@@ -511,7 +511,9 @@ skills:
       enabled: true
       maxlevel: 5
       cooldown: 18.0
-      cooldownDecreasePerLevel: 1.0
+      cooldownDecreasePerLevel: 2.0
+      damage: 7.0
+      damageIncreasePerLevel: 2.0
     colossus:
       enabled: true
       maxlevel: 3
