--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -11,6 +11,7 @@ core:
       password: BetterPvP123!
       ip: 127.0.0.1:27821
   redis:
+    enabled: false
     database: 0
     password: BetterPvPAdmin123!
     host: 127.0.0.1
