Remove hard redis requirement to host a BetterPvP server (#279)
* Remove hard redis requirement to host a BetterPvP server

* Remove database and password constructor parameter

--- a/core/src/main/resources/config.yml
+++ b/core/src/main/resources/config.yml
@@ -11,7 +11,7 @@ core:
       password: BetterPvP123!
       ip: 127.0.0.1:27821
   redis:
-    database: 0
+    enabled: false
     password: BetterPvPAdmin123!
     host: 127.0.0.1
     port: 27822
