better grounded check + delay config value

--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -504,6 +504,7 @@ skills:
       damage: 5.0
       cooldownDecreasePerLevel: 2.0
       damageIncreasePerLevel: 2.0
+      slamDelay: 500
     cripplingblow:
       enabled: true
       maxlevel: 3
