--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -373,7 +373,8 @@ skills:
       fireTickDurationIncreasePerLevel: 0.0
       baseFireTrailDuration: 2.0
       fireTrailDurationIncreasePerLevel: 0.0
-      speedStrength: 1
+      speedStrength: 0
+      strengthStrength: 1
       energyDecreasePerLevel: 1.0
     lifebonds:
       enabled: true
