--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -124,11 +124,11 @@ skills:
       enabled: true
       maxlevel: 5
       cooldown: 30.0
-      percentHealthRecovered: 0.25
       duration: 2.5
-      canUseWhileSlowed: false
       cooldownDecreasePerLevel: 2.0
       durationIncreasePerLevel: 1.0
+      regenerationTime: 6
+      regenerationStrength: 2
     evade:
       enabled: true
       maxlevel: 5
