--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -500,10 +500,11 @@ skills:
       enabled: true
       maxlevel: 5
       cooldown: 20.0
-      radius: 6.0
-      damage: 5.0
-      cooldownDecreasePerLevel: 2.0
+      radius: 5.5
+      radiusIncreasePerLevel: 0.5
+      baseDamage: 5.0
       damageIncreasePerLevel: 2.0
+      cooldownDecreasePerLevel: 2.0
       slamDelay: 500
     cripplingblow:
       enabled: true
