1:1 seismic slam copy (#303)
* 1:1 seismic slam copy

* slam progress

* better grounded check + delay config value

* fixed some scaling isues and distance stuff

* Fix seismic

---------

Co-authored-by: ezrn <ezrncool@gmail.com>
Co-authored-by: Tom Hoogstra <tomhoogstra@live.com.au>

--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -499,10 +499,13 @@ skills:
     seismicslam:
       enabled: true
       maxlevel: 5
-      cooldown: 25.0
-      radius: 5
+      cooldown: 20.0
+      radius: 5.5
+      radiusIncreasePerLevel: 0.5
+      baseDamage: 5.0
+      damageIncreasePerLevel: 2.0
       cooldownDecreasePerLevel: 2.0
-      damage: 3.0
+      slamDelay: 500
     cripplingblow:
       enabled: true
       maxlevel: 3
