--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -437,14 +437,6 @@ skills:
       baseDuration: 7.0
       durationIncreasePerLevel: 0.0
       regenerationStrength: 0
-    cyclone:
-      enabled: true
-      maxlevel: 5
-      cooldown: 16.0
-      cooldownDecreasePerLevel: 1.0
-      baseDistance: 7.0
-      distanceIncreasePerLevel: 1.0
-      minimumDistance: 7
     polymorph:
       enabled: true
       maxlevel: 3
@@ -497,6 +489,15 @@ skills:
       baseRadius: 3.0
       radius: 3
       slownessStrength: 0
+    whirlwindsword:
+      enabled: true
+      maxlevel: 5
+      cooldown: 10.0
+      cooldownDecreasePerLevel: 1.0
+      baseDistance: 7.0
+      distanceIncreasePerLevel: 0.0
+      baseDamage: 3.0
+      damageIncreasePerLevel: 1.0
     seismicslam:
       enabled: true
       maxlevel: 5
