--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -322,7 +322,7 @@ skills:
       immuneTime: 0.45
       fireTicks: 50
       energyDecreasePerLevel: 1.0
-    moltenblast:
+    fireblast:
       enabled: true
       maxlevel: 5
       cooldown: 23.0
@@ -332,7 +332,7 @@ skills:
       baseDamage: 6.0
       damageIncreasePerLevel: 0.0
       baseFireDuration: 0.0
-    glacialprison:
+    iceprison:
       enabled: true
       maxlevel: 5
       cooldown: 25.0
@@ -676,7 +676,7 @@ skills:
       maxlevel: 3
       baseDamage: 0.0
       damageIncreasePerLevel: 0.5
-    entangle:
+    barbedarrows:
       enabled: true
       maxlevel: 3
       baseDuration: 2.0
