--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -827,15 +827,15 @@ skills:
       enabled: true
       maxlevel: 3
       numLines: 1
-      effectDuration: 5
+      effectDuration: 6
+      effectDurationIncreasePerLevel: 1
       maxDistance: 64.0
       numPoints: 30
-      cooldown: 20.0
-      escapeRadius: 7.0
-      damage: 7.0
-      damageIncreasePerLevel: 2.0
+      cooldown: 13.0
+      escapeRadius: 8.0
       escapeRadiusIncreasePerLevel: 0.0
       maxDistanceIncreasePerLevel: 0.0
+      cooldownDecreasePerLevel: 1.0
     grasp:
       enabled: true
       maxlevel: 5
