--- a/champions/src/main/resources/configs/skills/skills.yml
+++ b/champions/src/main/resources/configs/skills/skills.yml
@@ -557,6 +557,7 @@ skills:
       maxStacks: 3
       baseDuration: 5.0
       durationIncreasePerLevel: 1.0
+      health: 4.0
     resistance:
       enabled: true
       maxlevel: 3
@@ -691,6 +692,7 @@ skills:
       cooldownDecreasePerLevel: 2.0
       baseNumArrows: 10
       numArrowsIncreasePerLevel: 0
+      damage: 8.0
     vitalityspores:
       enabled: true
       maxlevel: 5
@@ -702,7 +704,7 @@ skills:
       maxlevel: 3
       maxTimeBetweenShots: 5.0
       maxConsecutiveHits: 4
-      numMisses: 2
+      numMisses: 1
       maxTimeBetweenShotsIncreasePerLevel: 1.0
       baseDamage: 0.0
       damageIncreasePerLevel: 0.75
@@ -738,10 +740,10 @@ skills:
     healingshot:
       enabled: true
       maxlevel: 5
-      cooldown: 17.0
+      cooldown: 13.0
       baseDuration: 4.0
       increasePerLevel: 1.0
-      cooldownDecreasePerLevel: 3.0
+      cooldownDecreasePerLevel: 1.0
   warlock:
     bloodbarrier:
       enabled: true
